<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.trip_sheet_printing.TripSheetPrintingActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/et_trip_sheet_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edit_text_background"
        android:hint="@string/trip_sheet_no"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:inputType="textCapCharacters"
        android:maxLength="20"
        android:maxLines="1"
        android:text="tripsheet1"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintHorizontal_weight="5"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBar" />

    <ImageView
        android:id="@+id/iv_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_download"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/et_trip_sheet_no"
        app:layout_constraintTop_toTopOf="@+id/et_trip_sheet_no"/>

    <EditText
        android:id="@+id/barCode"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/bar_code"
        android:padding="@dimen/_8sdp"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:drawableRight="@drawable/ic_barcode_scanner"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintHorizontal_weight="5"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_download"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_trip_sheet_no" />

    <ImageView
        android:id="@+id/iv_print"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:src="@drawable/ic_camera"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="@+id/barCode"
        app:layout_constraintTop_toTopOf="@+id/barCode"/>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginTop="@dimen/_20sdp"
        app:layout_constraintTop_toBottomOf="@+id/barCode"/>

    <TextView
        android:id="@+id/tv_c_note_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/c_note_number"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="@dimen/_22sdp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toStartOf="@+id/tv_carton_no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <TextView
        android:id="@+id/tv_carton_no"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/carton_no"
        android:textColor="@color/black"
        android:textSize="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintHorizontal_weight="1"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_c_note_number"
        app:layout_constraintTop_toBottomOf="@+id/divider" />

    <View
        android:id="@+id/divider_"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/grey"
        android:layout_marginTop="@dimen/_5sdp"
        app:layout_constraintTop_toBottomOf="@+id/tv_carton_no"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_stickerListRecyclerview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/_5sdp"
        android:nestedScrollingEnabled="true"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:listitem="@layout/item_trip_sheet_list"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_"/>

</androidx.constraintlayout.widget.ConstraintLayout>